2015-12-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgamma] Modernize appearance.

	* src/ftgamma.c: Major renovations.
	* src/ftgamma.1: Update.

2015-12-10  Werner Lemberg  <wl@gnu.org>

	* src/ftcommon.c (FTDemo_Install_Font): Handle alloc/file errors.

	Problem reported by Alexei.

2015-12-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (event_angle_change): Wrap angle differently.

2015-12-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Miscellaneous updates.

	* src/ftstring.c (event_gamma_change): Do not report gamma updates.
	(write_header): Permanently display gamma.
	(gamma_ramp_draw): Brighten the curve.

2015-12-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Small improvements.

	* graph/gblender.h (GBLENDER_SHADE_INDEX): Round to nearest grid.
	* graph/gblender.c (gblender_lookup, gblender_lookup_channel): Minor.

2015-12-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Unravel blending, part 2.

	* graph/gblender.c (gblender_reset_key, gblender_reset_channel_key):
	Set alpha grid values explicitly.

2015-12-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Unravel blending.

	* graph/gblender.c (gblender_reset_key, gblender_reset_channel_key):
	Entrust optimizations to modern compilers, remove unused variables.

2015-11-30  Werner Lemberg  <wl@gnu.org>

	[graph] Initialize local variables after checking channel change.

	This fixes a crash if foreground color == background color.

	Problem reported by Alexei.

	* graph/gblender.h (GBLENDER_VARS): Split off initialization to...
	(GBLENDER_VARS_SET): ...this new macro.
	(GBLENDER_CHANNEL_VARS): Split off initialization to...
	(GBLENDER_CHANNEL_VARS_SET): ...this new macro.

	* graph/gblcolor.h, graph/gblhbgr.h, graph/gblhrgb.h,
	graph/gblvbgr.h, graph/gblvrgb.h: Updated.

2015-11-29  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblender.c (gblender_clear): Fix typo.

2015-11-29  Alexei Podtelezhnikov  <apodtele@gmail.com>
