@@ -1,3 +1,7 @@
+2015-12-15  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftgamma.c (do_fill): Fix compiler warning.
+
 2015-12-14  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	[ftgamma] Modernize appearance.
